Initial commit of source from Trillium.

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Guelph Game Jam 3 game
+Nueva Isabela
+
+A game of space colonization built for Ludum Dare 23.
+
+Based on source code from my prototype Cosmos engine and improvements developed in my Guelph Game Jam 3 project, Trillium.
